CS320GroupProject/Conway/eric--web/static/css/home.css
@import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap");
:root {
  --greenShade: #00a884;
  --redShade: #dd163b;
  --blueShade: #0693e3;
}

@-webkit-keyframes transitionDown {
  from {
    opacity: 0;
    -webkit-transform: rotateX(-10deg);
            transform: rotateX(-10deg);
  }
  to {
    opacity: 1;
    -webkit-transform: rotateX(0deg);
            transform: rotateX(0deg);
  }
}

@keyframes transitionDown {
  from {
    opacity: 0;
    -webkit-transform: rotateX(-10deg);
            transform: rotateX(-10deg);
  }
  to {
    opacity: 1;
    -webkit-transform: rotateX(0deg);
            transform: rotateX(0deg);
  }
}

body {
  font-family: ubuntu;
  margin: 0;
  background-color: #1c202a;
  color: white;
  height: 100%;
  -webkit-animation: 1.5s ease-out 0s 1 transitionDown;
          animation: 1.5s ease-out 0s 1 transitionDown;
}

.navbar {
  background: #12171c;
  padding: 1em;
  overflow: hidden;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
  z-index: 100;
}

.navbar .home {
  text-decoration: none;
  font-weight: bold;
  font-size: 2em;
  color: white;
  line-height: 1.7em;
}

.navbar .home span {
  color: var(--blueShade);
}

.navbar nav {
  display: none;
}

.navbar .wrapper {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  place-content: space-between;
}

.navbar .mobileOpen {
  cursor: pointer;
  -webkit-filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(93deg) brightness(103%) contrast(103%);
          filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(93deg) brightness(103%) contrast(103%);
}

.navbar .mobileOpen:hover {
  -webkit-filter: invert(45%) sepia(79%) saturate(3280%) hue-rotate(177deg) brightness(97%) contrast(95%);
          filter: invert(45%) sepia(79%) saturate(3280%) hue-rotate(177deg) brightness(97%) contrast(95%);
}

.navbar .mobileExit {
  cursor: pointer;
  float: right;
  margin: 0.5em;
}

.navbar .mobileExit:hover {
  -webkit-filter: invert(45%) sepia(79%) saturate(3280%) hue-rotate(177deg) brightness(97%) contrast(95%);
          filter: invert(45%) sepia(79%) saturate(3280%) hue-rotate(177deg) brightness(97%) contrast(95%);
}

a {
  text-decoration: none;
  color: var(--blueShade);
}

ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

section {
  -webkit-transform-style: preserve-3d;
          transform-style: preserve-3d;
  padding: 5em;
}

.hero {
  text-align: center;
}

.hero .topTitle {
  letter-spacing: 0.1em;
  text-transform: uppercase;
}

.hero .botTitle {
  font-size: 2.75em;
  line-height: 1.4em;
}

.hero .startButton {
  background: var(--blueShade);
  padding: 0.7em;
  border-radius: 0.3em;
  display: inline-block;
  width: 7em;
}

.hero .startButton .ctaText {
  color: white;
  font-size: 2em;
  letter-spacing: 0.05em;
}

.hero .startButton .ctaText:hover {
  font-weight: bold;
}

ul.qualityList {
  margin: 0;
  padding-left: 1.5em;
  display: -ms-grid;
  display: grid;
}

ul.qualityList li {
  font-size: 1.3em;
  margin-bottom: 0.75em;
  margin-left: 2em;
  position: relative;
}

ul.qualityList li:before {
  content: '';
  position: absolute;
  left: -2.5em;
  width: 1em;
  height: 1em;
  -webkit-filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(93deg) brightness(103%) contrast(103%) url("../images/arrowhead.svg");
          filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(93deg) brightness(103%) contrast(103%) url("../images/arrowhead.svg");
  background-image: url("../images/arrowhead.svg");
  background-size: contain;
}

.gallery {
  display: table-row;
  white-space: nowrap;
  overflow: hidden;
  left: 100%;
  position: relative;
  text-align: center;
  width: 100%;
}

.wrap {
  display: table-cell;
}

.gallery img {
  display: inline-block;
  -webkit-transition: 0.5s;
  transition: 0.5s;
  padding: 15px;
  height: auto;
  width: 100px;
}

.gallery img:hover {
  -webkit-transform: scale(1.1);
          transform: scale(1.1);
}

.desc {
  color: white;
  bottom: 0;
  left: 0;
}

.mainRules {
  background-color: #1c202a;
  position: relative;
  z-index: -1;
}

.mainRules .mainRules li {
  font-size: 1.3em;
  text-align: center;
  font-weight: bold;
  border-radius: 1em;
}

.mainRules::after {
  content: " ";
  position: absolute;
  z-index: -1;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0.5;
  background-image: url(../images/bg_home.jpg);
  background-size: 100%;
  background-repeat: no-repeat;
  overflow: hidden;
}

h2 {
  font-size: 2em;
}

label {
  display: block;
  font-size: 1.2em;
  margin-bottom: 0.5em;
}

input, textarea {
  width: 100%;
  padding: 0.8em;
  margin-bottom: 1em;
  border-radius: 0.3em;
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
}

.sendMessage {
  background-color: var(--redShade);
  color: white;
  font-size: 1.2em;
  font-weight: bold;
  margin-bottom: 1.3em;
  border-radius: 0.5em;
  border: none;
  display: inline-block;
  padding: 1em;
  width: 15em;
  cursor: pointer;
}

.sendMessage:hover {
  background-color: white;
  color: var(--redShade);
}

.substButton:hover {
  text-decoration: underline;
}

@-webkit-keyframes fadeIn {
  from {
    opacity: 0%;
  }
  to {
    opacity: 100%;
  }
}

@keyframes fadeIn {
  from {
    opacity: 0%;
  }
  to {
    opacity: 100%;
  }
}

nav.openMobNav {
  display: block;
  -webkit-animation: 0.5s ease-out 0s 1 fadeIn;
          animation: 0.5s ease-out 0s 1 fadeIn;
}

nav {
  position: fixed;
  z-index: 100;
  width: 45%;
  right: 0;
  top: 0;
  background-color: rgba(0, 0, 0, 0.9);
  height: 100%;
  padding: 1em;
}

nav ul.navLeft {
  margin-top: 3.5em;
}

nav li a {
  color: white;
  font-size: 1.4em;
  text-decoration: none;
  display: block;
  padding: 0.75em;
  text-align: right;
}

nav li a:hover {
  font-weight: bold;
  color: var(--blueShade);
}

@media only screen and (min-width: 640px) {
  .mobileOpen, .mobileExit {
    display: none;
  }
  .navbar .wrapper {
    display: -ms-grid;
    display: grid;
    -ms-grid-columns: 11em auto;
        grid-template-columns: 11em auto;
    -webkit-box-pack: unset;
        -ms-flex-pack: unset;
            justify-content: unset;
  }
  .navbar nav {
    background: none;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
        -ms-flex-pack: justify;
            justify-content: space-between;
    position: relative;
    width: 100%;
    padding: 0;
  }
  .navbar nav ul {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
  }
  .navbar nav ul.navLeft {
    margin: 0;
  }
  .navbar nav li.current a {
    font-weight: bold;
  }
}

@media only screen and (min-width: 1080px) {
  .contactBlock .wrapper {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
  }
}
/*# sourceMappingURL=home.css.map */

